# unit-run

./: .gitignore  LICENSE  LICENSE.txt  README.md  README.rst  build.sh  build_and_install.sh  pyproject.toml  setup.py
build_scripts/doc/: build.sh
build_scripts/old/doc/: build.sh  build_api.sh  make_html.sh
build_scripts/src/: build.sh  build_and_install.sh  release.sh
doc/: _config.yml  _toc.yml  intro.md
doc/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
doc/_build/.doctrees/apidocs/: index.doctree
doc/_build/.doctrees/autoapi/: index.doctree
doc/_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/jupyter_execute/: markdown-notebooks.ipynb
doc/_static/: all.js
doc/apidocs/: index.rst
doc/apidocs/unit_run/: unit_run.components.md  unit_run.md
doc/installation/: index.ipynb  package_installation.md  prerequisites.md
doc/user_guide/CLI_Tool/: del.ipynb  index.md  once.ipynb  set.ipynb
examples/: test_example.py
examples/tests/: manual_p_group2.json  test.py
examples/tests/test/: .meta.json  name3.param_group.json  name4.param_group.json
src/unit-run/: utils.py
src/unit_run/: __init__.py  cli.py  components.py  utils.py
test/: .meta.json  test1.param_group.json  test3.param_group.json
tests/: test.py
tests/test/: .meta.json  test2.param_group.json  test4.param_group.json
unit_run/: Unit.py  __init__.py  cli.py  utils.py
(+99 files in other folders)
